DE183 fixed comments wrapping

--- a/app/scss/calendar/_quickView.scss
+++ b/app/scss/calendar/_quickView.scss
@@ -622,7 +622,7 @@ input[disabled='disabled']
         .commentBody
         {
             font-size: $fontSizeSmall;
-            white-space: pre;
+            white-space: pre-wrap;
         }
 
     }
